# VibeRustAutocue

./: .gitignore  API.md  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/autocue-cli/: Cargo.toml
crates/autocue-cli/src/: main.rs
crates/autocue-config/: Cargo.toml
crates/autocue-config/src/: defaults.rs  lib.rs  theme.rs
crates/autocue-core/: Cargo.toml
crates/autocue-core/src/: lib.rs  loader.rs  marker.rs  script.rs  scroll.rs  tokenizer.rs
crates/autocue-input/: Cargo.toml
crates/autocue-input/src/: keyboard.rs  lib.rs  remote.rs
crates/autocue-render/: Cargo.toml
crates/autocue-render/src/: display.rs  heading_bar.rs  layout.rs  lib.rs  mirror.rs  painter.rs  shader.wgsl  window.rs
