[package]
name = "autocue-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Configuration layer for VibeRustAutocue: TOML parsing, theme presets"

[dependencies]
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
