[package]
name = "autocue-input"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Input layer for VibeRustAutocue: keyboard shortcuts, remote control via WebSocket"

[dependencies]
thiserror.workspace = true
winit.workspace = true
serde.workspace = true
