[package]
name = "autocue-render"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Rendering layer for VibeRustAutocue: winit window, cosmic-text layout, wgpu painting"

[dependencies]
thiserror.workspace = true
winit.workspace = true
